# homelab

./: .gitignore  .zprofile  .zshenv  .zshrc  README.md  config  deploy.yaml  homelab.code-workspace  installation-audit.md  installation-script  shell-tooling.md
ai/: compose.yaml
ansible/: check-diskspace.yml  check-if-reboot-required.yml  compose.yml  disable-swap.yml  install-kube.yml  inventory.ini  ping.yml  run_custom_script.yml  update-apt-packages.yml
dotfiles/: zprofile  zshenv.template  zshrc
dragonfly/: compose.yml
it/: compose.yaml
kafka/: compose.yaml
minio/: compose.yaml
mongo/: compose.yaml  mongodb-keyfile  rep.yaml
monitoring/: fluentbit.yaml
mysql/: compose.yaml
neo4j/: compose.yaml
nginx/: compose.yaml  nginx.conf
notebooks/mix-notebook/: cache.py  embedder.py  main.ipynb  point_builder.py  pyproject.toml  summorizations.py
postgres/: compose.yaml
qdrant/: compose.yaml
rabbitmq/: compose.yaml
redis/: compose.yml  create-cluster.sh  redis.conf
redis-cluster/: Dockerfile.cluster-proxy  cluster-proxy.conf  compose.yaml  create-cluster  haproxy.cfg  stop-cluster
redisinsight/: compose.yaml
scripts/: Cargo.toml  convert_image.py  csv2json.py  delete_by_mtime  epoch  fcp  git-fzf  git-fzf.py  git-fzf.rs  html2pdf.py  install_kube  installations  lower  mysql.json  package-lock.json  package.json  pass  pip  profile.txt  pyproject.toml  redis-dump.py  redis-restore.py  sql2types  ticket  timestamp  types.ts  uninstall_kube  upper  uuid
seq/: compose.yaml
sqlserver/: compose.yaml
tests/: BgService.cs  Program.cs  (+3 more)
(+34 files in other folders)
