[project]
name = "mix-notebook"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jupyterlab>=4.4.6",
    "python-sdk",
    "joblib>=1.5.1",
    "scipy>=1.16.1",
    "sentence-transformers>=5.1.0",
    "tenacity>=9.1.2",
    "torch>=2.8.0",
    "torchaudio>=2.8.0",
    "torchvision>=0.23.0",
    "pandas>=2.3.1",
    "datasets>=4.0.0",
    "db-dtypes>=1.4.3",
    "duckdb>=1.3.2",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "jq>=1.10.0",
    "ipywidgets>=8.1.7",
    "qdrant-client[fastembed]>=1.15.1",
]

[tool.uv.sources]
python-sdk = { git = "https://github.com/shakedguy/python-sdk.git" }
